kubernetes/equestria/apps/obsidian-sync/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian-sync
  labels:
    name: obsidian-sync
    goldilocks.fairwinds.com/enabled: "true"
    kustomize.toolkit.fluxcd.io/prune: disabled
